--- a/signup.html
+++ b/signup.html
@@ -4,92 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
         <title>Register Page</title> 
-        <style>
-.signup
-{
-    background:#4caf4fde; 
-    background-repeat: no-repeat; 
-    background-attachment: fixed; 
-    background-size: cover;
-}
-
-form 
-{
-    /* Center the form on the page */
-    margin: auto;
-    width: 400px;
-    padding:300px;
-    align-content: center;
-    
-    }
-    
-ul{
-    list-style: none;
-    }
-
-.form
-{
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 60px;
-    bottom: 0;
-    text-align: center;
-}
-
-input[type=text]:focus {
-    background-color: lightblue;
-  }
-
-.play {
-    background-color: #006600;
-    color: white;
-    padding: 16px 32px;
-    text-decoration: none;
-    margin: 4px 2px;
-    cursor: pointer;
-}
-
-.return {
-    background-color: #f1ed12b6;
-    color: white;
-    padding: 16px 32px;
-    text-decoration: none;
-    margin: 4px 2px;
-    cursor: pointer;
-}
-
-.register{
-    background-color: #0d0e0dde;
-    color: white;
-    padding: 16px 32px;
-    text-decoration: none;
-    margin: 4px 2px;
-    cursor: pointer;
-}
-
-input
-{
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    box-sizing: border-box;
-}
-
-
-label
-{
-    font-size: 40px;
-    font-style: normal;
-    font-family: fantasy;
-    }
-
-.returnPage
-{
-    width: 1080px;
-    margin: 0 auto;
-}
-        </style>
+        <link rel="stylesheet" type="text/css" href="./main.css" />
     </head>
     <body class="signup">
         <form action="/signup" class="form" method="post">
