--- a/game.html
+++ b/game.html
@@ -11,26 +11,24 @@
 
 <body>
     <div class="game">
-        <h3>Blackjack</h3>
+        <h3>Blackjack</h2>
 
-        <div class="game-body">
-            <div class="game-options">
-                <button type="button" id="btnStart" class="btn" value="Play" onclick="startblackjack()">hi</button>
-                <input type="button" class="btn" value="Hit Me" onclick="hitMe()">
-                <input type="button" class="btn" value="Stand" onclick="stay()">
-            </div>
+        <div class="game-options">
+            <input type="button" id="btnStart" class="btn" value="Play" onclick="startblackjack()">
+            <input type="button" class="btn" value="Hit Me" onclick="hitMe()">
+            <input type="button" class="btn" value="Stand" onclick="stay()">
+        </div>
 
-            <div class="status" id="status"></div>
+        <div class="status" id="status"></div>
 
-            <div id="deck" class="deck">
-                <div id="deckcount">52</div>
-            </div>
+        <div id="deck" class="deck">
+            <div id="deckcount">52</div>
+        </div>
 
-            <div id="players" class="players">
-            </div>
+        <div id="players" class="players">
+        </div>
 
             <div class="clear"></div>
-        </div>
     </div>
     <script src="main.js">  </script>
     <script src="server.js"></script>
