--- a/alreadyExists.html
+++ b/alreadyExists.html
@@ -76,7 +76,7 @@ label
     <body>
         <div class="returnPage">
             <p style="font-size: 60px;">The Username or Email already exists. Please retry.</p><br>
-            <button class="return" type="submit" onclick="location.href='/signup';" value="Return">Return</button> 
+            <button class="return" type="submit" onclick="location.href='/app/signup';" value="Return">Return</button> 
         </div>
         <script src="server.js"></script>
     </body>
