--- a/wrongInformation.html
+++ b/wrongInformation.html
@@ -12,7 +12,7 @@
     <body>
         <div class="returnPage">
             <p style="font-size: 60px;">The username doesn't exist or the password cannot match. Please retry!</p><br>
-            <button class="return" type="submit" onclick="location.href='/login';" value="Return">Return</button>
+            <button class="return" type="submit" onclick="location.href='/app/login';" value="Return">Return</button>
         </div>
         <script src="server.js"></script>
     </body>
