--- a/login.html
+++ b/login.html
@@ -34,6 +34,7 @@
         <script>
             function setStorage () {
                 localStorage.setItem("username", document.getElementById('usrnm').value);
+                localStorage.setItem("password", document.getElementById('psswrd').value);
             }
         </script>
     </body>
